--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "VectorLib"
+name = "VecPosLib"
 version = "1.0.0"
 description = "This is a library that enables vector calculations in Python."
 authors = [
