--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ ignore_missing_imports = False
 show_error_codes = True
 exclude = venv|tests|scripts
 
-[mypy-package.*]
+[mypy-*]
 disallow_untyped_defs = True
 warn_unused_ignores = True
 warn_return_any = True
