--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,10 +16,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-        pip install setuptools
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip build
+        python -m pip install --upgrade typing_extensions setuptools pylint -r requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
