--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,9 +1,42 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+    branches: [ master, main ]
+    paths:
+      - '**.py'
+      - 'requirements.txt'
+      - 'pyproject.toml'
+      - 'setup.py'
+      - '.github/workflows/pylint.yml'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'tests/**'
+  pull_request:
+    branches: [ master, main ]
+    paths:
+      - '**.py'
+      - 'requirements.txt'
+      - 'pyproject.toml'
+      - 'setup.py'
+      - '.github/workflows/pylint.yml'
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'tests/**'
+
+defaults:
+  run:
+    shell: bash
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -15,9 +48,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
+      timeout-minutes: 10
       run: |
         python -m pip install --upgrade pip build
         python -m pip install --upgrade typing_extensions setuptools pylint -r requirements.txt
     - name: Analysing the code with pylint
+      timeout-minutes: 10
       run: |
         pylint $(git ls-files '*.py')
