--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build release distributions
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade build typing_extensions setuptools -r requirements.txt
+          python -m pip install --upgrade build typing_extensions setuptools matplotlib -r requirements.txt
           python -m build
 
       - name: Upload distributions
@@ -54,7 +54,7 @@ jobs:
           path: dist/
 
       - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1.12
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
         with:
           packages-dir: dist/
           skip-existing: true
