--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build release distributions
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade build typing_extensions setuptools matplotlib -r requirements.txt
+          python -m pip install --upgrade build typing_extensions setuptools -r requirements.txt
           python -m build
 
       - name: Upload distributions
