--- a/.gitignore
+++ b/.gitignore
@@ -11,56 +11,60 @@ __pycache__/
 env/
 venv/
 build/
-develop-eggs/
 dist/
+*.egg-info/
+.eggs/
+*.egg
+.installed.cfg
+develop-eggs/
 downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
 sdist/
 var/
-*.egg-info/
-.installed.cfg
-*.egg
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+htmlcov/
+.tox/
+.nox/
 .hypothesis/
 .pytest_cache/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# mypy
+# Type checker / static analysis
 .mypy_cache/
 .dmypy.json
+.pyright/
+.pyre/
 
-# VSCode
+# Jupyter Notebook
+.ipynb_checkpoints/
+
+# Editor / IDE
 .vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
 
-# Mac
+# OS / system files
 .DS_Store
-# System
 Thumbs.db
 Desktop.ini
 
-# Local config
+# Local config / secrets
 *.env
 *.local
+
+# Ruff
+.ruff_cache/
