--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "VecPosLib"
-version = "1.0.3.post3"
+version = "1.0.4"
 description = "Library for vector calculations in Python"
 readme = "README.md"
 authors = [
@@ -13,7 +13,7 @@ authors = [
 license = { file = "LICENSE.md" }
 requires-python = ">=3.13"
 dependencies = [
-  "numpy>=2.2.0,<2.3",
+  "numpy<2.3,>=2.2.0",
   "numba>=0.61.2"
 ]
 keywords = [
